# TE3003B

./: .gitignore  .gitmodules  README.md  test.py
.github/workflows/: python-app.yml
Camera_Calibration/: panorama_pipeline.py
FPGA_Lift_Control/servo_ctrl/: servo_ctrl.cst  servo_ctrl.v
FPGA_PWM_Controller/: pwm.cst  pwm.v
FPGA_Setup/: LED_test.v
Jetson_GPIO_Manipulation/: GPIO_Led.c
Maps/: current.pgm  current.yaml  landmarks.json  map_20260531_022459.pgm  map_20260531_022459.yaml  map_20260531_031046.pgm  map_20260531_031046.yaml  map_20260531_031146.yaml
Monte_Carlo_Localization/: mcl_node.py
Puzzlebot_Transformations/: puzzlebot_sim.py
Speech_Recognition/: speech_recognition.ipynb
Yolov11_Models/: data.yaml
reto_voz/src/voice_hmm/: README_voice_hmm.txt  context_hmm.md  package.xml  setup.cfg  setup.py
reto_voz/src/voice_hmm/config/: voice_hmm.yaml
reto_voz/src/voice_hmm/launch/: launch_voice_hmm.py  launch_voice_hmm_with_trigger.py
reto_voz/src/voice_hmm/voice_hmm/: hmm.py  (+10 more)
ros2_ws/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/ros2_ws/log/: latest_build
ros2_ws/ros2_ws/src/: puzzlebot_sim
ros2_ws/ros2_ws/src/mcl_puzzlebot/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/ros2_ws/src/mcl_puzzlebot/maps/: room_map.yaml
ros2_ws/ros2_ws/src/mcl_puzzlebot/mcl_puzzlebot/: mcl_node.py
ros2_ws/ros2_ws/src/mcl_puzzlebot/urdf/: puzzlebot_gazebo.urdf
ros2_ws/src/puzzlebot_ros/: setup.py
scripts/: Astarbug0.md  Hmm.md  hmm.sh  initdash.sh  inityolo.sh  mapping.md  set_ros_network.sh  voice.sh
(+111 files in other folders)
